Local updates: DO NOT SUBMIT
Signed-off-by: Drew Moseley <drew@moseleynet.net>

--- a/gstreamer/bash/simple-pipeline/docker-compose.arm64.yaml
+++ b/gstreamer/bash/simple-pipeline/docker-compose.arm64.yaml
@@ -44,7 +44,7 @@ services:
     depends_on:
       weston:
         condition: service_healthy
-    image: <your-username>/<your-image>
+    image: drewmoseley/gst_example
     volumes:
        - /tmp:/tmp 
        - /sys:/sys
